[JAVA-40694] Moved articles "UA Quick Guide to Spring @Value", "Using Spring @Value With Defaults" from spring-boot-properties-2 to spring-boot-properties